<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.example.gemox94.diabapp.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:background="@drawable/diabetes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
        android:id="@+id/il_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_email">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                style="?android:borderlessButtonStyle"
                android:id="@+id/login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_register"
                android:layout_weight="0.5"/>

            <Button
                style="?android:borderlessButtonStyle"
                android:id="@+id/login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_login"
                android:layout_weight="0.5"/>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
